--- a/src/front/styles/home.css
+++ b/src/front/styles/home.css
@@ -5,3 +5,17 @@
     one more css for each page that will contain the selected used 
     on that page only (the ones not reused in other pages).
 */
+.cabeceraBackgroundImg {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: url(https://i.picsum.photos/id/581/2000/300.jpg?hmac=i0FcmISxdclNYerqHuaIXTgIP6J2erTuKwZgVTTic0Y);
+}
+
+.Perfiles {
+  max-width: 18rem;
+}
+
+.info {
+  margin-left: 30rem;
+  margin-right: 30rem;
+}
