--- a/src/front/styles/home.css
+++ b/src/front/styles/home.css
@@ -8,9 +8,27 @@
 .cabeceraBackgroundImg {
   background-repeat: no-repeat;
   background-size: cover;
-  background-image: url(https://i.picsum.photos/id/581/2000/300.jpg?hmac=i0FcmISxdclNYerqHuaIXTgIP6J2erTuKwZgVTTic0Y);
+  background-image: url(https://i.picsum.photos/id/610/2000/500.jpg?hmac=Famtor6H7Bnm0_joFzl1_LhlHvuqCtuuenGfnoBNw_4);
+  padding-bottom: 10rem;
+  background-size: auto;
 }
 
 .Perfiles {
   max-width: 18rem;
 }
+
+.represntativaIMG {
+  height: 60%;
+  width: 60%;
+  float: left;
+  margin-right: 15px;
+}
+
+.represntativaIMG2 {
+  height: 60%;
+  width: 60%;
+  float: right;
+  margin-right: 15px;
+}
+
+
